samples/_failures_safe/1761288564_fc9e60_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_ca651b2a.c: In function ‘main’:
./samples/SAFE/__tmp_ca651b2a.c:163:5: error: expected declaration or statement at end of input
  163 |     printf("Enter input characters (a-f) or 'q' to quit:\n");
      |     ^~~~~~
